--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
         <activity
+            android:name=".editLocation"
+            android:exported="false" />
+        <activity
             android:name=".MapsLocationActivity"
             android:exported="false" />
         <activity
