--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,13 +24,16 @@
         tools:targetApi="31">
         <activity
             android:name=".editLocation"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".MapsLocationActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
-            android:name=".password_rest"
-            android:exported="false" />
+            android:name=".PasswordResetActivity"
+            android:exported="false"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".BottomNavMenuActivity"
             android:exported="false"
