--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
         <activity
-            android:name=".editLocation"
+            android:name=".EditLocationActivity"
             android:exported="false"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
