--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
-            android:name=".PartsCategorieActivity"
+            android:name=".PartsCategoriesActivity"
             android:exported="false"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
