--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
         <activity
+            android:name=".EditPartActivity"
+            android:exported="false" />
+        <activity
             android:name=".ViewPartsActivity"
             android:exported="false"
             android:theme="@style/AppTheme.NoActionBar" />
